Start updating titles

--- a/site/index.html
+++ b/site/index.html
@@ -8,9 +8,9 @@ order: 0
       <div class="row">
         <div class="col-md-12 col-lg-8 offset-lg-1 col-xl-5 offset-xl-1">
           <div class="banner-hero-card">
-            <h1 class="mb-4">ARDC Nectar Research Cloud Tutorials</h1>
-            <h6 class="mb-3">Build your practical cloud skills with Nectar Research Cloud <span class="d-inline-block">self-paced</span> online tutorials.</h6>
-            <p>Whether you are getting started, increasing your efficiency or looking to hone your cloud skills and make your solutions more sophisticated. Our technical tutorials are for <i>beginner</i>, <i>intermediate</i> and <i>advanced</i> users and we also explain some of our <i>non-technical</i> topics.</p> 
+            <h1 class="mb-4">Australian Access Federation Tutorials</h1>
+            <h6 class="mb-3">Learn how to connect your services to aaf using <span class="d-inline-block">self-paced</span> online tutorials.</h6>
+            <p> Our technical tutorials are for <i>beginner</i>, <i>intermediate</i> and <i>advanced</i> users and we also explain some of our <i>non-technical</i> topics.</p> 
           </div>
         </div>
       </div>
@@ -95,8 +95,8 @@ order: 0
         <div class="col-sm-12 col-lg-10 offset-lg-1">
           <div class="card text-center shadow">
             <div class="card-body px-lg-5">
-              <h2 class="my-3">Interested in Nectar Research Cloud training?</h2>
-              <h4 class="mb-4">Register for a Live Online Training workshop!</h4>
+              <h2 class="my-3">Need more help?</h2>
+              <h4 class="mb-4">Reach out to our friendly support team!</h4>
               <a class="btn btn-outline-primary btn-lg mb-3" href="https://support.ehelp.edu.au/support/solutions/articles/6000156761-learning-and-training-resources">Learn More</a>
             </div>
           </div>
